jvimalprasathdev/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Alias__c</fullName>
        <description>This is the alias of the contact</description>
        <label>Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_Day__c</fullName>
        <description>This is the birth day of the contact</description>
        <label>Birth Day</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_Month__c</fullName>
        <description>This is the birth month of the contact</description>
        <label>Birth Month</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Branch_District__c</fullName>
        <formula>Branch__r.District__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <formula>Branch__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Number__c</fullName>
        <formula>VALUE(Branch__r.Branch_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch_Region__c</fullName>
        <formula>Branch__r.District__r.Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is to add a  contact to a campaign.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>This is the type the contact. The contact could be anyone like builder, realtor, attorney, appraiser etc.</description>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>RB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Realtor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initials__c</fullName>
        <description>This is the initials of the contact</description>
        <label>Initials</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>This is to capture notes about the contact.</description>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationShip_Banker_EID__c</fullName>
        <label>RelationShip Banker EID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_Business_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contact_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Business_Contact</value>
        </filters>
        <label>My Business Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Active_Contact_Layout</fullName>
        <active>true</active>
        <label>Active Contact Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Contact</fullName>
        <active>true</active>
        <label>Business Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inactive_Contact_Layout</fullName>
        <active>true</active>
        <label>Inactive Contact Layout</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AssistantPhoneValidation</fullName>
        <active>true</active>
        <description>Ensure that the Phone Number is in correct format</description>
        <errorConditionFormula>IF( ISNULL(AssistantPhone), false, 
    REGEX( AssistantPhone, &quot;.*[a-zA-Z@.]++.*&quot; )
)</errorConditionFormula>
        <errorDisplayField>AssistantPhone</errorDisplayField>
        <errorMessage>Oops! There are letters or special characters in a Phone Number field. Please remove to continue. Hint: the correct format is (222) 222-3333.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContactEmailValidation</fullName>
        <active>true</active>
        <description>Ensure to see if the email is in correct format.</description>
        <errorConditionFormula>IF(Email = null, false,NOT(REGEX(  Email  ,&apos;([a-zA-Z0-9_\\-\\.\&apos;]+)@((\\[a-z]{1,3}\\.[a-z]{1,3}\\.[a-z]{1,3}\\.)|(([a-zA-Z0-9\\-]+\\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})&apos;)))</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Invalid email address.The email id should be in the correct format of abc123@abc123.com</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContactMailingAddressZipCodeValidation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(( MailingPostalCode  ) = null, false,AND(
OR(
AND(LEN(  MailingPostalCode ) &lt;&gt;5, LEN( MailingPostalCode ) &lt;&gt;10),
NOT(CONTAINS(&quot;0123456789&quot;, LEFT(  MailingPostalCode , 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID(  MailingPostalCode  , 2, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( MailingPostalCode  , 3, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( MailingPostalCode  , 4, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( MailingPostalCode , 5, 1))),
AND(
LEN( MailingPostalCode) = 10,
OR(
MID(  MailingPostalCode , 6, 1) &lt;&gt; &quot;-&quot;,
NOT(CONTAINS(&quot;0123456789&quot;, MID(  MailingPostalCode  , 7,
1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID(  MailingPostalCode , 8,
1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID(  MailingPostalCode  , 9,
1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID(  MailingPostalCode  , 10,
1)))
)
)
)
))</errorConditionFormula>
        <errorDisplayField>MailingPostalCode</errorDisplayField>
        <errorMessage>Zip code is of the format 99999 or 99999-9999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContactOtherAdressZipCodeValidation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(( OtherPostalCode  ) = null, false,AND(
OR(
AND(LEN( OtherPostalCode ) &lt;&gt;5, LEN( OtherPostalCode  ) &lt;&gt;10),
NOT(CONTAINS(&quot;0123456789&quot;, LEFT(  OtherPostalCode  , 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( OtherPostalCode   , 2, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID(OtherPostalCode   , 3, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( OtherPostalCode  , 4, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID(OtherPostalCode , 5, 1))),
AND(
LEN( OtherPostalCode ) = 10,
OR(
MID( OtherPostalCode  , 6, 1) &lt;&gt; &quot;-&quot;,
NOT(CONTAINS(&quot;0123456789&quot;, MID(  OtherPostalCode   , 7,
1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( OtherPostalCode  , 8,
1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID(OtherPostalCode   , 9,
1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID(OtherPostalCode   , 10,
1)))
)
)
)
))</errorConditionFormula>
        <errorDisplayField>OtherPostalCode</errorDisplayField>
        <errorMessage>Zip code is of the format 99999 or 99999-9999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Do_not_change_Inactive_Contact_Name</fullName>
        <active>true</active>
        <errorConditionFormula>(ISCHANGED(  FirstName  ) || ISCHANGED(  LastName ) ||  ISCHANGED( Salutation ) ||  ISCHANGED(  OwnerId  ) ) &amp;&amp;   InActive__c =true &amp;&amp;  $Profile.Name !=&apos;System Administrator&apos;</errorConditionFormula>
        <errorMessage>Contact is Inactive. Please Contact your administrator to Activate the Contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Zip_Code_if_Realtor</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Contact_Type__c , &apos;Realtor&apos;) &amp;&amp; ISBLANK(MailingPostalCode)</errorConditionFormula>
        <errorDisplayField>MailingPostalCode</errorDisplayField>
        <errorMessage>Enter Mailing Postal Code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FaxValidation</fullName>
        <active>true</active>
        <description>Ensure that the Fax Number is in correct format</description>
        <errorConditionFormula>IF( ISNULL(Fax), false, 
    REGEX( Fax, &quot;.*[a-zA-Z@.]++.*&quot; )
)</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>Oops! There are letters or special characters in a Fax Number field. Please remove to continue. Hint: the correct format is (222) 222-3333.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HomePhoneValidation</fullName>
        <active>true</active>
        <description>Ensure that the Phone Number is in correct format</description>
        <errorConditionFormula>IF( ISNULL(HomePhone), false, 
    REGEX( HomePhone, &quot;.*[a-zA-Z@.]++.*&quot; )
)</errorConditionFormula>
        <errorDisplayField>HomePhone</errorDisplayField>
        <errorMessage>Oops! There are letters or special characters in a Phone Number field. Please remove to continue. Hint: the correct format is (222) 222-3333.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MobileValidation</fullName>
        <active>true</active>
        <description>Ensure that the Phone Number is in correct format</description>
        <errorConditionFormula>IF( ISNULL(MobilePhone), false, 
    REGEX( MobilePhone, &quot;.*[a-zA-Z@.]++.*&quot; )
)</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Oops! There are letters or special characters in a Phone Number field. Please remove to continue. Hint: the correct format is (222) 222-3333.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OtherPhoneValidation</fullName>
        <active>true</active>
        <description>Ensure that the Phone Number is in correct format</description>
        <errorConditionFormula>IF( ISNULL(OtherPhone), false, 
    REGEX( OtherPhone, &quot;.*[a-zA-Z@.]++.*&quot; )
)</errorConditionFormula>
        <errorDisplayField>OtherPhone</errorDisplayField>
        <errorMessage>Oops! There are letters or special characters in a Phone Number field. Please remove to continue. Hint: the correct format is (222) 222-3333.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PhoneValidation</fullName>
        <active>true</active>
        <description>Ensure that the Phone Number is in correct format</description>
        <errorConditionFormula>IF( ISNULL(Phone), false, 
    REGEX( Phone, &quot;.*[a-zA-Z@.]++.*&quot; )
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Oops! There are letters or special characters in a Phone Number field. Please remove to continue. Hint: the correct format is (222) 222-3333.</errorMessage>
    </validationRules>
</CustomObject>